--- a/jobHunter/users/templates/registration/login.html
+++ b/jobHunter/users/templates/registration/login.html
@@ -26,6 +26,7 @@
             <div style="display: flex; flex-direction: column;">
                 <button type="submit" value="Submit" class="button main-button"> Login </button>
                 <a href="/users/signup-user" class="button"> Signup instead </a>
+                <a href="/users/password-reset" class="button"> Reset password </a>
             </div>
         </form>
     </div>
